# kmdx

./: .gitignore  CMakeLists.txt  README.md  libethcore  testChain.json
aya/: CMakeLists.txt  main.cpp  misc.h
kmdx/: AccountManager.cpp  CMakeLists.txt  main.cpp
libdevcore/: CMakeLists.txt  Common.cpp  FileSystem.cpp  FileSystem.h  make_trie.cpp  maketrie
libethashseal/: CMakeLists.txt  Ethash.cpp  Ethash.h  EthashCPUMiner.h  EthashClient.h  EthashProofOfWork.h  GenesisInfo.cpp  GenesisInfo.h
libethashseal/genesis/: komodoNetwork.cpp
libethashseal/genesis/test/: komodoNetworkTest.cpp
libevm/: CMakeLists.txt  VM.cpp  VMOpt.cpp
libtm/: CMakeLists.txt  TMHost.h  TMPeer.h  bleh
libtm/Message/: Message.cpp  Message.h  MessageDeserializer.cpp  MessageDeserializer.h  ProposalMessage.cpp  ProposalMessage.h  VoteMessage.cpp  VoteMessage.h
libtm/consensus/: ConsensusConfig.cpp  ConsensusConfig.h  ConsensusState.cpp  ConsensusState.h  ConsensusStateMessaging.cpp  ConsensusStateTransitions.cpp  ConsensusStateVoting.cpp  ProposalReceiver.cpp  ProposalReceiver.h  ReceiveRoutineWorker.cpp  ReceiveRoutineWorker.h
libtm/events/: EventSwitch.cpp  EventSwitch.h
libtm/helpers/: Bridge.cpp  Bridge.h  Finally.cpp  Finally.h  Logger.cpp  Logger.h  Time.cpp  Time.h  TmController.cpp  TmController.h  finallies.cpp
libtm/helpers/finallies/: FinUpdateRoundStep.cpp  FinUpdateRoundStep.h
libtm/node/: Node.cpp  Node.h
libtm/state/: Executor.cpp  Executor.h  State.cpp  State.h
libtm/test/: ByzantineTest.cpp  MockPV.cpp  MockPV.h  ValidatorSetTest.cpp  ValidatorSetTest.h  VoteSetTest.cpp  VoteSetTest.h  VoteTest.cpp  VoteTest.h  boost_test.cpp  common_test.cpp  common_test.h  main.cpp  main.h
libtm/types/: AddVoteResult.cpp  AddVoteResult.h  Block.cpp  Block.h  BlockVotes.cpp  BlockVotes.h  Commit.cpp  Commit.h  Error.cpp  Error.h  Event.cpp  Event.h  EventBus.cpp  EventBus.h  Heartbeat.cpp  Heartbeat.h  HeightVoteSet.cpp  HeightVoteSet.h  HexBytes.cpp  HexBytes.h  PrivValidator.cpp  PrivValidator.h  Proposal.cpp  Proposal.h  RoundState.cpp  RoundState.h  RoundStepType.h  Server.cpp  Server.h  Signable.cpp  Signable.h  Signature.h  TimeoutTicker.cpp  TimeoutTicker.h  Tx.h  Validator.cpp  Validator.h  ValidatorSet.cpp  ValidatorSet.h  Vote.cpp  (+5 more)
libtm/types/event/: Event.cpp  Event.h
libweb3jsonrpc/: AccountHolder.cpp  AccountHolder.h  AdminEth.cpp  AdminNet.cpp  Debug.cpp  Debug.h  Eth.cpp  JsonHelper.cpp  JsonHelper.h  Net.cpp  Personal.cpp  Test.cpp  Web3.cpp
libwebthree/: CMakeLists.txt  WebThree.cpp  WebThree.h
libwing/: Account.cpp  Account.h  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  BlockChainImporter.cpp  BlockChainSync.cpp  BlockChainSync.h  BlockQueue.cpp  BlockQueue.h  CMakeLists.txt  ChainParams.cpp  ChainParams.h  Client.cpp  Client.h  ClientTest.cpp  ClientTest.h  EthereumHost.cpp  EthereumHost.h  EthereumPeer.cpp  EthereumPeer.h  Executive.cpp  Executive.h  ExtVM.h  GasPricer.h  GenericFarm.h  GenericMiner.h  Interface.h  LogFilter.h  State.cpp  State.h  TMHost.cpp  TMHost.h  TMPeer.cpp  TMPeer.h  TmHostCapability.cpp  TmHostCapability.h  TmPeerCapability.cpp  TmPeerCapability.h  (+10 more)
libwingcore/: BasicAuthority.cpp  BlockHeader.cpp  CMakeLists.txt  ChainOperationParams.h  Common.h  KeyManager.h  Precompiled.cpp  TransactionBase.cpp  TransactionBase.h
libwingvm/: ABI.cpp  ABI.h  Asset.cpp  Asset.h  Bridge.cpp  Bridge.h  CMakeLists.txt  KMDBridge.cpp  KMDBridge.h  Manager.cpp  Manager.h  ManagerExecutive.cpp  Native.cpp  Native.h  NativeErrors.h  NativeManager.cpp  NativeManager.h  NativeStorage.cpp  NativeVM.cpp  NativeVM.h  NativeVMStorage.cpp  RootContract.h
scripts/: jsonrpcproxy.py
test/: CMakeLists.txt
test/tools/jsontests/: StateTests.cpp  TransactionTests.cpp  vm.cpp  vm.h
test/tools/libtesteth/: BlockChainHelper.cpp  BlockChainHelper.h  FillJsonFunctions.cpp  ImportTest.h  Options.cpp  Options.h  TestHelper.cpp  TestHelper.h  TestUtils.h
test/tools/libtestutils/: BlockChainLoader.cpp  BlockChainLoader.h  FixedClient.h  TestLastBlockHashes.h
test/unittests/libdevcrypto/: crypto.cpp
test/unittests/libethcore/: difficulty.cpp  keymanager.cpp
test/unittests/libethereum/: Block.cpp  BlockChain.cpp  BlockChainInsert.cpp  BlockQueue.cpp  EthereumPeerTest.cpp  ExtVMTest.cpp  GasPricer.cpp  Genesis.cpp  SnapshotImporterTest.cpp  StateUnitTests.cpp  Transaction.cpp  TransactionQueue.cpp
test/unittests/libwingvm/: TestAsset.cpp  TestManager.cpp  TestNative.cpp  TestNativeHelper.cpp  TestNativeHelper.h
